fix: refactor and fix typo in Company Domain, compelete swagger annotations for ApiController routes
